--- a/style.css
+++ b/style.css
@@ -135,7 +135,6 @@ button {
 }
 
 .Sudo_body {
-    color: #fff;
     padding-left: 20%;
     padding-right: 20%;
     padding-top: 10%;
@@ -160,6 +159,7 @@ button {
     padding: 6px;
 }
 
+s
 
 
 #CV, #SKILLS {
